--- a/examples/gene_regulatory_network_example.ipynb
+++ b/examples/gene_regulatory_network_example.ipynb
@@ -201,7 +201,7 @@
     "          :γ_p => γ_p_val,\n",
     "          :p => p_val]\n",
     "\n",
-    "u₀ = [1, 1]\n",
+    "u0map = [:g => 1, :P => 1]\n",
     "\n",
     "tspan = (0., 6.0);"
    ]
@@ -217,7 +217,7 @@
     "jsys = complete(jsys)\n",
     "\n",
     "# create a discrete problem setting the simulation parameters\n",
-    "dprob = DiscreteProblem(jsys, u₀, tspan, pmap)\n",
+    "dprob = DiscreteProblem(jsys, u0map, tspan, pmap)\n",
     "\n",
     "# create a JumpProblem compatible with ReactionSystemMod\n",
     "jprob = JumpProblem(jsys, dprob, Direct(), save_positions=(false, false))\n",
@@ -238,9 +238,6 @@
     "plt_m = plot()   # plot mean protein number\n",
     "plt_std = plot() # plot ssd of protein number\n",
     "\n",
-    "# construct the initial molecule number mapping\n",
-    "u₀map = deterministic_IC(u₀, dm_eqs)\n",
-    "\n",
     "# solve moment ODEs for each closure and plot the results\n",
     "for closure in [\"normal\", \"derivative matching\", \n",
     "                \"conditional gaussian\", \"conditional derivative matching\"]\n",
@@ -249,7 +246,7 @@
     "    closed_eqs = moment_closure(eqs, closure, binary_vars)\n",
     "    \n",
     "    # solve the system of moment ODEs\n",
-    "    oprob = ODEProblem(closed_eqs, u₀map, tspan, pmap)\n",
+    "    oprob = ODEProblem(closed_eqs, u0map, tspan, pmap)\n",
     "    sol = solve(oprob, AutoTsit5(Rosenbrock23()), saveat=0.01)\n",
     "    \n",
     "    # μ₀₁ is 2nd and μ₀₂ is 4th element in sol\n",
@@ -370,8 +367,8 @@
     "          :b_x => mean_b_x,\n",
     "          :b_y => mean_b_y]\n",
     "\n",
-    "# initial gene state and protein number, order [g_x, g_y, x, y]\n",
-    "u₀ = [1, 1, 1, 1]\n",
+    "# initial gene state and protein numbers\n",
+    "u0map = [:g_x => 1, :g_y => 1, :x => 1, :y => 1]\n",
     "\n",
     "# time interval to solve on\n",
     "tspan = (0., 12.0);"
@@ -440,9 +437,7 @@
     "using Sundials # for CVODE_BDF\n",
     "\n",
     "closed_eqs = moment_closure(eqs, \"normal\", binary_vars)\n",
-    "u₀map = deterministic_IC(u₀, closed_eqs)\n",
-    "\n",
-    "oprob = ODEProblem(closed_eqs, u₀map, tspan, pmap)\n",
+    "oprob = ODEProblem(closed_eqs, u0map, tspan, pmap)\n",
     "sol = solve(oprob, CVODE_BDF(), saveat=0.1);"
    ]
   },
@@ -453,9 +448,7 @@
    "outputs": [],
    "source": [
     "closed_eqs = moment_closure(eqs, \"conditional gaussian\", binary_vars)\n",
-    "u₀map = deterministic_IC(u₀, closed_eqs)\n",
-    "\n",
-    "oprob = ODEProblem(closed_eqs, u₀map, tspan, pmap)\n",
+    "oprob = ODEProblem(closed_eqs, u0map, tspan, pmap)\n",
     "sol = solve(oprob, CVODE_BDF(), saveat=0.1);"
    ]
   },
@@ -467,7 +460,7 @@
    "source": [
     "jsys = convert(JumpSystem, rn, combinatoric_ratelaws=false)\n",
     "jsys = complete(jsys)\n",
-    "dprob = DiscreteProblem(jsys, u₀, tspan, pmap)\n",
+    "dprob = DiscreteProblem(jsys, u0map, tspan, pmap)\n",
     "jprob = JumpProblem(jsys, dprob, Direct(), save_positions=(false, false))\n",
     "\n",
     "ensembleprob  = EnsembleProblem(jprob)\n",
@@ -487,9 +480,7 @@
     "for closure in [\"derivative matching\", \"conditional derivative matching\"]\n",
     "\n",
     "    closed_eqs = moment_closure(eqs, closure, binary_vars)\n",
-    "\n",
-    "    u₀map = deterministic_IC(u₀, closed_eqs)\n",
-    "    oprob = ODEProblem(closed_eqs, u₀map, tspan, pmap)\n",
+    "    oprob = ODEProblem(closed_eqs, u0map, tspan, pmap)\n",
     "    sol = solve(oprob, Tsit5(), saveat=0.1)\n",
     "\n",
     "    # μ₀₀₀₁ is the 4th and μ₀₀₀₂ is the 12th element in sol (can check with closed_eqs.odes.states)\n",
